# blop

./: .pre-commit-config.yaml  README.md  docker-compose.yml  launch-devcontainer.sh  make_switcher.py  pixi.toml  pyproject.toml  switcher.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: README.md  _docs.yml  _testing.yml
docs/source/: conf.py
docs/wip/: qserver-experiment.md
main/: .buildinfo  explanation.html  genindex.html  how-to-guides.html  index.html  installation.html  objects.inv  reference.html  release-history.html  search.html  searchindex.js  tutorials.html
main/_includes/: installation-code-snippets.html
main/_modules/: index.html
main/_sources/: index.rst.txt  installation.rst.txt  release-history.rst.txt  tutorials.rst.txt
main/_static/: documentation_options.js
main/explanations/: ax-integration.html  protocols.html
main/how-to-guides/: acquire-baseline.html  attach-data-to-experiments.html  custom-generation-strategies.html  manual-suggestions.html  set-dof-constraints.html  set-outcome-constraints.html  use-ophyd-devices.html  use-tiled.html
main/reference/: agent.html  dof-constraint.html  dof.html  objective.html  outcome-constraint.html  (+2 more)
sim/: README.md  pyproject.toml
sim/blop_sim/: __init__.py  beamline.py  handlers.py
sim/blop_sim/backends/: __init__.py  core.py  simple.py  xrt.py
sim/blop_sim/devices/: __init__.py  detector.py  slit.py
sim/blop_sim/devices/simple/: __init__.py  kb_mirror.py
sim/blop_sim/devices/xrt/: __init__.py  kb_mirror.py
sim/blop_sim/xrt_kb_pair/: xrt_beamline.py
(+71 files in other folders)
